--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^9.20.1",
     "eslint-plugin-tsdoc": "^0.4.0",
     "globals": "^15.15.0",
+    "@vitest/coverage-v8": "^3.0.6",
     "tsc-watch": "^6.2.1",
     "typedoc": "^0.27.7",
     "typescript-eslint": "^8.24.1",
