--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "theory-examples",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "tsc-watch --onSuccess \"node dist/index.js\"",
     "doc": "typedoc",
